Update the function

--- a/taq_data_extract.ipynb
+++ b/taq_data_extract.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,14 @@
     "\n",
     "import numpy as np\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import multiprocessing as mp\n",
+    "from itertools import product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +49,13 @@
     "        df = pd.DataFrame()\n",
     "        chunksize = 10 ** 7\n",
     "\n",
-    "        date_list = taq_data_tools_article_reproduction \\\n",
-    "            .taq_bussiness_days(year)\n",
+    "        init_date = f'01/01/{year}'\n",
+    "        last_date = f'12/31/{year}'\n",
+    "\n",
+    "        # Use only the bussiness days\n",
+    "        dt = pd.date_range(start=init_date, end=last_date, freq='B')\n",
+    "        dt_df = dt.to_frame(index=False)\n",
+    "        date_list = dt_df[0].astype(str).tolist()\n",
     "\n",
     "        # Load data\n",
     "        csv_file = f'data/{ticker}_{year}_NASDAQ_{type}.csv'\n",
@@ -122,8 +129,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The following blocks measure the time used to extract the data. As the function append new information every time the function is runned, I delete the files in every run of the block."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,42 +150,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "12min 56s ± 1min 26s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
-    "taq_data_extract(ticker_i, type_q, year)"
+    "taq_data_extract(ticker_i, type_q, year)\n",
+    "os.system('rm hdf5_dayly_data_2008/*.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "2min 13s ± 2.18 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
-    "taq_data_extract(ticker_i, type_t, year)"
+    "taq_data_extract(ticker_i, type_t, year)\n",
+    "os.system('rm hdf5_dayly_data_2008/*.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "16min 56s ± 3min per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
-    "taq_data_extract(ticker_j, type_q, year)"
+    "taq_data_extract(ticker_j, type_q, year)\n",
+    "os.system('rm hdf5_dayly_data_2008/*.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "Data Saved\n",
+      "\n",
+      "2min 1s ± 2.4 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "taq_data_extract(ticker_j, type_t, year)\n",
+    "os.system('rm hdf5_dayly_data_2008/*.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The following block extract the data that will be computed by the other functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit\n",
-    "taq_data_extract(ticker_j, type_t, year)"
+    "tickers = ['AAPL', 'TAQ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 7.87 µs\n",
+      "Extracting dayly data\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'taq_data_analysis_article_reproduction' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-ee374404a19f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocesses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Extracting dayly data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n\u001b[0m\u001b[1;32m      5\u001b[0m                  product(tickers, ['quotes'], [year]))\n\u001b[1;32m      6\u001b[0m     pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'taq_data_analysis_article_reproduction' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "%time\n",
+    "with mp.Pool(processes=mp.cpu_count()) as pool:\n",
+    "    print('Extracting dayly data')\n",
+    "    pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n",
+    "                 product(tickers, ['quotes'], [year]))\n",
+    "    pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n",
+    "                 product(tickers, ['trades'], [year]))"
    ]
   }
  ],
