Create taq_mipoint_price_data function

--- a/taq_data_extract.ipynb
+++ b/taq_data_extract.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -314,19 +314,158 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 7.87 µs\n",
+      "Wall time: 13.1 µs\n",
       "Extracting dayly data\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'taq_data_analysis_article_reproduction' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-ee374404a19f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocesses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpool\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Extracting dayly data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n\u001b[0m\u001b[1;32m      5\u001b[0m                  product(tickers, ['quotes'], [year]))\n\u001b[1;32m      6\u001b[0m     pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'taq_data_analysis_article_reproduction' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process ForkPoolWorker-13:\n",
+      "Process ForkPoolWorker-14:\n",
+      "Process ForkPoolWorker-11:\n",
+      "Process ForkPoolWorker-15:\n",
+      "Process ForkPoolWorker-12:\n",
+      "Process ForkPoolWorker-10:\n",
+      "Process ForkPoolWorker-16:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "KeyboardInterrupt\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/queues.py\", line 335, in get\n",
+      "    res = self._reader.recv_bytes()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/connection.py\", line 216, in recv_bytes\n",
+      "    buf = self._recv_bytes(maxlength)\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/connection.py\", line 407, in _recv_bytes\n",
+      "    buf = self._recv(4)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/connection.py\", line 379, in _recv\n",
+      "    chunk = read(handle, remaining)\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 108, in worker\n",
+      "    task = get()\n",
+      "KeyboardInterrupt\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/queues.py\", line 334, in get\n",
+      "    with self._rlock:\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/synchronize.py\", line 96, in __enter__\n",
+      "    return self._semlock.__enter__()\n",
+      "KeyboardInterrupt\n",
+      "Process ForkPoolWorker-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/process.py\", line 93, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 119, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/multiprocessing/pool.py\", line 47, in starmapstar\n",
+      "    return list(itertools.starmap(args[0], args[1]))\n",
+      "  File \"<ipython-input-2-7e9ecda62c7e>\", line 88, in taq_data_extract\n",
+      "    format='table', append=True)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/pandas/core/generic.py\", line 2368, in to_hdf\n",
+      "    return pytables.to_hdf(path_or_buf, key, self, **kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/pandas/io/pytables.py\", line 274, in to_hdf\n",
+      "    f(store)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/pandas/io/pytables.py\", line 266, in <lambda>\n",
+      "    f = lambda store: store.append(key, value, **kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/pandas/io/pytables.py\", line 986, in append\n",
+      "    **kwargs)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/pandas/io/pytables.py\", line 1418, in _write_to_group\n",
+      "    s.create_index(columns=index)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/pandas/io/pytables.py\", line 3428, in create_index\n",
+      "    v.create_index(**kw)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/tables/table.py\", line 3609, in create_index\n",
+      "    tmp_dir, _blocksizes, _verbose)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/tables/table.py\", line 319, in _column__create_index\n",
+      "    blocksizes=blocksizes)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/tables/index.py\", line 400, in __init__\n",
+      "    super(Index, self).__init__(parentnode, name, title, new, filters)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/tables/group.py\", line 238, in __init__\n",
+      "    super(Group, self).__init__(parentnode, name, _log)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/tables/node.py\", line 275, in __init__\n",
+      "    self._g_post_init_hook()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/tables/index.py\", line 554, in _g_post_init_hook\n",
+      "    self.create_temp()\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/site-packages/tables/index.py\", line 1013, in create_temp\n",
+      "    \".tmp\", \"pytables-\", self.tmp_dir)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/tempfile.py\", line 342, in mkstemp\n",
+      "    return _mkstemp_inner(dir, prefix, suffix, flags, output_type)\n",
+      "  File \"/home/tp/jchenaol/.pyenv/versions/3.6.5/lib/python3.6/tempfile.py\", line 260, in _mkstemp_inner\n",
+      "    fd = _os.open(file, flags, 0o600)\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
@@ -334,11 +473,18 @@
     "%time\n",
     "with mp.Pool(processes=mp.cpu_count()) as pool:\n",
     "    print('Extracting dayly data')\n",
-    "    pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n",
+    "    pool.starmap(taq_data_extract,\n",
     "                 product(tickers, ['quotes'], [year]))\n",
-    "    pool.starmap(taq_data_analysis_article_reproduction.taq_data_extract,\n",
+    "    pool.starmap(taq_data_extract,\n",
     "                 product(tickers, ['trades'], [year]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
