Check times taq_midpoint_price data

--- a/taq_midpoint_price_data.ipynb
+++ b/taq_midpoint_price_data.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### midpoint price data por dia\n",
+    "### midpoint price data por evento por dia\n",
     "\n",
     "Esta funcion no tiene problema en cuanto al tiempo de ejecucion. Las operaciones que realiza son muy basicas. Sin embargo, mi implementacion anterior usando solo `numpy` se demoraba 0,020s por dia y ahora se demora 0.1s por dia utilizando `pandas`.\n",
     "\n",
@@ -29,7 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modules\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +62,11 @@
     "    :return: tuple -- The function returns a tuple with numpy arrays.\n",
     "    \"\"\"\n",
     "\n",
-    "    function_name = taq_midpoint_event_data.__name__\n",
-    "\n",
     "    # Load data\n",
     "    # TAQ data gives directly the quotes data in every second that there is\n",
     "    # a change in the quotes\n",
     "    time_q_, bid_q_, ask_q_, _, _ = pickle.load(open(\n",
-    "        '../../taq_data/pickle_dayly_data_{1}/TAQ_{0}_quotes_{1}{2}{3}.pickle'\n",
-    "        .format(ticker, year, month, day), 'rb'))\n",
+    "        f'pickle_dayly_data_{year}/TAQ_{ticker}_quotes_{year}{month}{day}.pickle', 'rb'))\n",
     "\n",
     "    # Some files are corrupted, so there are some zero values that\n",
     "    # does not have sense\n",
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +127,69 @@
     "\n",
     "    return data_quotes_event"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ticker = 'AAPL'\n",
+    "year = '2008'\n",
+    "month = '01'\n",
+    "day = '02'\n",
+    "date = f'{year}-{month}-{day}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.25 ms ± 81.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "taq_midpoint_event_data_numpy(ticker, year, month, day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.9 ms ± 522 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "taq_midpoint_event_data_pandas(ticker, date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### midpoint price data por segundo por dia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -135,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
